[package]
name = "techworldBackend"
version = "0.1.0"
edition = "2024"


[dependencies]
actix-web = "4.4"
actix-multipart = "0.6"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
bcrypt = "0.10"
jsonwebtoken = "8.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
utoipa = { version = "3.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.0", features = ["actix-web"] }
dotenv = "0.15"